feat: phrase-forge-api 1.0

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+#APP
+NODE_ENV=development
+APP_PORT=3000
+
+#DATABASE
+POSTGRES_HOST=phrase-forge-db
+POSTGRES_PORT=5432
+POSTGRES_DB=phrases_forge
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1234
+
+X_API_KEY=xCB4SghYY6L0wFTVqcwa6cD5x4yITIWn
